--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+keylime (6.2.1-1) unstable; urgency=medium
+
+  [ Thore Sommer ]
+  * d/watch adjust regex for newer versions
+  * d/patches: remove ssl patch for older python versions
+  * d/patches: update dataclasses patch
+  * New upstream version 6.2.1
+
+ -- Thore Sommer <debian@thson.de>  Mon, 03 Jan 2022 20:10:00 +0100
+
 keylime (6.2.0-3) unstable; urgency=medium
 
   * d/control: Drop libtss2-dev from
