--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+keylime (6.3.0-1) unstable; urgency=medium
+
+  [ Thore Sommer ]
+  * New upstream version 6.3.0
+
+ -- Thore Sommer <debian@thson.de>  Thu, 27 Jan 2022 17:42:42 +0100
+
 keylime (6.2.1-1) unstable; urgency=medium
 
   [ Thore Sommer ]
