--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+keylime (6.5.1-1) unstable; urgency=medium
+
+  [ Thore Sommer ]
+  * New upstream version 6.5.1
+  * debian: changes for 6.5.1
+
+ -- Thore Sommer <debian@thson.de>  Tue, 08 Nov 2022 12:34:08 +0100
+
 keylime (6.3.2-1) UNRELEASED; urgency=medium
 
   [ Thore Sommer ]
